# SYCLomatic

clang/examples/DPCT/Runtime/: cuGraphicsMapResources.cu  cuGraphicsResourceGetMappedPointer.cu  cuGraphicsUnmapResources.cu  cuGraphicsUnregisterResource.cu
clang/include/clang/DPCT/: DPCTOptions.inc
clang/lib/DPCT/: AnalysisInfo.cpp  AnalysisInfo.h  DPCT.cpp  Utility.h
clang/lib/DPCT/CommandOption/: ValidateArguments.h
clang/lib/DPCT/ErrorHandle/: Error.cpp  Error.h
clang/lib/DPCT/MigrateScript/: MigrateBuildScript.cpp  MigrateBuildScript.h  MigrateCmakeScript.cpp  MigrateCmakeScript.h  MigratePythonBuildScript.cpp  MigratePythonBuildScript.h
clang/lib/DPCT/RuleInfra/: APINamesTemplateType.inc  ExprAnalysis.cpp  ExprAnalysis.h  MapNames.cpp  TypeLocRewriters.cpp
clang/lib/DPCT/RulesAsm/: AsmMigration.cpp
clang/lib/DPCT/RulesAsm/Parser/: AsmParser.cpp  AsmTokenKinds.def
clang/lib/DPCT/RulesLang/: APINamesGraphicsInterop.inc  APINamesMemory.inc  APINamesStream.inc  RewriterSYCLcompat.cpp  RulesLang.cpp  RulesLangGraphicsInterop.cpp  RulesLangTexture.cpp
clang/lib/DPCT/RulesLangLib/: CUBAPIMigration.cpp  CUBAPIMigration.h
clang/lib/DPCT/RulesLangLib/CUB/: RewriterClassMethods.cpp
clang/lib/DPCT/SrcAPI/: APINames.inc  APINames_ASM.inc  APINames_CUB.inc  TypeNames.inc
clang/runtime/dpct-rt/include/dpct/: bindless_images.hpp  blas_gemm_utils.hpp  device.hpp  group_utils.hpp  kernel.hpp  memory.hpp  util.hpp
clang/test/dpct/: cuGraphics.cu  cuGraphics_default_option.cu  cudaGraphics.cu  driver-stream-and-event.cu  driver_device.cu  kernel-function-typecast.cu  know_unsupported_type.cu  macro_rule.cu  macro_test.cu  math_specific_UDR_test.cu  texture_object_driver.cu  thrust-algo.cu  thrust-for-h2o4gpu.cu  thrust-it-diff.cu  thrust-reduce.cu  thrust_system_error.cu  vec3_move.cu  virtual_memory.cu
clang/test/dpct/asm/: cp.cu  cvt.cu  lop3.cu  membar_fence.cu  membar_no_exp.cu  red.cu  shfl.cu  shfl_sync.cu
clang/test/dpct/cmake_migration/case_001/: case_001_framework.cpp
clang/test/dpct/cub/: template_uninstantiated.cu
clang/test/dpct/cub/blocklevel/: blockshuffle.cu
clang/test/dpct/gen_build_script2/: Makefile
clang/test/dpct/gen_build_script3/: Makefile
clang/test/dpct/python_migration/case_001/: case_001_framework.cpp
clang/test/dpct/python_migration/case_002/: expected_pytorch.py
clang/test/dpct/python_migration/case_003/: expected_pytorch.py
clang/test/dpct/python_migration/case_005/: expected_pytorch.py
clang/test/dpct/python_migration/case_006/: case_006_torch_cuda.cpp  expected.py  input.py
clang/test/dpct/python_migration/case_007/: case_007_test_extension_name.cpp
clang/test/dpct/python_migration/case_008/: case_008_comments.cpp
clang/test/dpct/pytorch/: ATen.cu  c10.cu  torch.cu
clang/test/dpct/query_api_mapping/: test_all.cu
clang/tools/dpct/: CMakeLists.txt
clang/tools/dpct/DpctOptRules/: CMakeLists.txt  python_build_script_migration_rule_ipex.yaml  pytorch_api.yaml
clang/tools/dpct/extensions/: CMakeLists.txt  README.md
clang/tools/dpct/extensions/python_rules/: python_build_script_migration_rule_ipex.yaml  python_build_script_migration_rule_pytorch.yaml
clang/tools/dpct/extensions/pytorch_api_rules/: pytorch_api.yaml
docs/dev_guide/api-mapping-status/: ASM_API_migration_status.csv  CUB_API_migration_status.csv  Runtime_and_Driver_API_migration_status.csv  cuBLAS_API_migration_status.csv  cuSPARSE_API_migration_status.csv  thrust_API_migration_status.csv
llvm/lib/Support/: CommandLine.cpp
(+14 files in other folders)
